# xmlable

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pr.yml  pypi.yml
examples/: README.md
examples/basic_config/: config.xsd  config_xml_example.xml  config_xml_template.xml  main.py
examples/complex/: config.xsd  config_xml_example.xml  config_xml_template.xml  main.py
examples/complex_application/: config.xsd  config_xml_example.xml  config_xml_template.xml  ipconn.py  main.py
examples/invalid/: main.py
examples/maps/: config.xsd  config_xml_example.xml  config_xml_template.xml  main.py
examples/namespaces/: config.xsd  config_xml_example.xml  config_xml_template.xml  main.py
examples/userdefined/: config.xsd  config_xml_example.xml  config_xml_template.xml  main.py  pgconn.py
src/: example.py  xmlable.py
src/xmlable/: __init__.py  _errors.py  _io.py  _lxml_helpers.py  _manual.py  _user.py  _utils.py  _xmlify.py  _xobject.py
tests/: test_basic.py  test_errors.py  test_meta.py  utils.py
